fixed overflow x

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+body {
     overflow-x: hidden;
 }
 .name{
@@ -27,7 +27,7 @@
 .cardimg {
     width: 80px;
     height: 80px;
-    overflow: hidden;
+    /* overflow: hidden; */
     border-radius: 100%;
     margin: -35px auto 0;
     background-color: rgb(0, 0, 0);
